--- a/db/package.json
+++ b/db/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "npm run build && node dist/index.js",
-    "seed:db": "npm run build && node dist/seed-db.js",
+    "db:seed": "npm run build && node dist/seed-db.js",
     "refresh:views": "npm run build && node dist/cron.js"
   },
   "keywords": [],
