--- a/engine/package.json
+++ b/engine/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend-http",
+  "name": "engine",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,9 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.21",
+    "redis": "^4.6.14"
+  },
+  "devDependencies": {
+    "typescript": "^5.4.0",
+    "@types/node": "^20.0.0",
     "@types/redis": "^4.0.11",
-    "express": "^4.19.2",
     "vitest": "^1.6.0"
   }
 }
+
