--- a/ws/package.json
+++ b/ws/package.json
@@ -2,7 +2,7 @@
   "name": "ws",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc -b",
     "start": "node dist/index.js",
@@ -12,9 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/redis": "^4.0.11",
-    "@types/ws": "^8.5.10",
     "redis": "^4.6.14",
     "ws": "^8.17.1"
+  },
+  "devDependencies": {
+    "typescript": "^5.6.3",
+    "@types/redis": "^4.0.11",
+    "@types/ws": "^8.5.10",
+    "@types/node": "^20.14.10"
   }
 }
+
+
+
+
