added snapshot.json in docker compose volumes for persistence, modded .envs to include both docker, local dev versions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,6 +76,8 @@ services:
         condition: service_started
     env_file:
       - ./engine/.env
+    volumes:
+      - ./engine/snapshot.json:/app/snapshot.json
 
   db-seed:
     build:
