--- a/db/package.json
+++ b/db/package.json
@@ -14,12 +14,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "pg": "^8.12.0",
     "redis": "^4.6.14"
   },
   "devDependencies": {
+    "@types/node": "^22.5.0",
     "@types/pg": "^8.11.6",
-    "typescript": "^5.6.3",
-    "@types/node": "^22.5.0"
+    "typescript": "^5.6.3"
   }
 }
