--- a/mm/.env.example
+++ b/mm/.env.example
@@ -1,1 +1,2 @@
-API_BASE_URL=http://api:3000
+API_BASE_URL=http://localhost:3000  # http://api:3000 when using docker, "http://localhost:3000" when using localhost
+ADMIN_SECRET=
