--- a/ws/package.json
+++ b/ws/package.json
@@ -12,17 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "redis": "^4.6.14",
     "ws": "^8.17.1"
   },
   "devDependencies": {
-    "typescript": "^5.6.3",
+    "@types/node": "^20.14.10",
     "@types/redis": "^4.0.11",
     "@types/ws": "^8.5.10",
-    "@types/node": "^20.14.10"
+    "typescript": "^5.6.3"
   }
 }
-
-
-
-
