fixed user balance creation with clerk

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ POSTGRES_USER=your_user
 POSTGRES_PASSWORD=your_password
 REDIS_PORT=6379
 TIMESCALE_PORT=5432
+
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=your_publishable_key
