--- a/api/.env.example
+++ b/api/.env.example
@@ -1,17 +1,20 @@
 PORT=3000
 
 # Postgres
-POSTGRES_HOST=localhost#timescaledb when using docker
+POSTGRES_HOST=timescaledb #localhost #timescaledb when using docker
 POSTGRES_PORT=5432
 POSTGRES_DB=my_database
 POSTGRES_USER=your_user
 POSTGRES_PASSWORD=your_password
 
 # Redis
-REDIS_HOST=localhost #redis when using docker
+REDIS_HOST=redis #localhost #redis
 REDIS_PORT=6379
 
 CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
 
-ADMIN_SECRET=
+ADMIN_SECRET=admin_secret_123
+
+CLERK_WEBHOOK_SECRET=
+
