--- a/api/package.json
+++ b/api/package.json
@@ -13,11 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "@clerk/express": "^1.7.62",
+    "body-parser": "^2.2.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.19.2",
     "pg": "^8.12.0",
-    "redis": "^4.6.14"
+    "redis": "^4.6.14",
+    "svix": "^1.84.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
