--- a/db/.env.example
+++ b/db/.env.example
@@ -1,11 +1,11 @@
 # Redis
-REDIS_HOST=redis
+REDIS_HOST=redis #localhost #redis
 REDIS_PORT=6379
-REDIS_URL=redis://redis:6379
+REDIS_URL=redis://redis:6379 #redis://localhost:6379 #redis://redis:6379
 
 # Database (Timescale/Postgres)
 POSTGRES_DB=my_database
 POSTGRES_USER=your_user
 POSTGRES_PASSWORD=your_password
-POSTGRES_HOST=timescaledb
+POSTGRES_HOST=timescaledb #timescaledb
 POSTGRES_PORT=5432
