--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,6 @@
-NEXT_PUBLIC_API_URL=http://api:3000/api/v1
-NEXT_PUBLIC_WS_URL=ws://ws:3001/
+NEXT_PUBLIC_API_URL=http://api:3000/api/v1 #http://localhost:3000/api/v1 #http://api:3000/api/v1
+NEXT_PUBLIC_WS_URL=ws://ws:3001 #ws://localhost:3001 #ws://ws:3001
 PORT=3002
+
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
