modded compose.yml, .env files such that running locally and via docker both works properly, updated readme

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,20 +1,17 @@
 PORT=3000
 
 # Postgres
-POSTGRES_HOST=timescaledb #localhost #timescaledb when using docker
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=my_database
 POSTGRES_USER=your_user
 POSTGRES_PASSWORD=your_password
 
 # Redis
-REDIS_HOST=redis #localhost #redis
+REDIS_HOST=localhost
 REDIS_PORT=6379
 
 CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
-
-ADMIN_SECRET=admin_secret_123
-
 CLERK_WEBHOOK_SECRET=
-
+ADMIN_SECRET=
