--- a/db/.env.example
+++ b/db/.env.example
@@ -1,11 +1,10 @@
-# Redis
-REDIS_HOST=redis #localhost #redis
-REDIS_PORT=6379
-REDIS_URL=redis://redis:6379 #redis://localhost:6379 #redis://redis:6379
-
-# Database (Timescale/Postgres)
+# Defaults for Local Development
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
 POSTGRES_DB=my_database
 POSTGRES_USER=your_user
 POSTGRES_PASSWORD=your_password
-POSTGRES_HOST=timescaledb #timescaledb
-POSTGRES_PORT=5432
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_URL=redis://localhost:6379
