--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,14 @@
+# Ports to expose to your host machine
 API_PORT=3000
 WS_PORT=3001
 FRONTEND_PORT=3002
 
+# Shared Infrastructure Config
+TIMESCALE_PORT=5432
+REDIS_PORT=6379
 POSTGRES_DB=my_database
 POSTGRES_USER=your_user
 POSTGRES_PASSWORD=your_password
-REDIS_PORT=6379
-TIMESCALE_PORT=5432
 
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=your_publishable_key
+# Build args
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
