--- a/engine/.env.example
+++ b/engine/.env.example
@@ -1,9 +1,8 @@
 # Redis
-REDIS_HOST=redis 
+REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_URL=redis://redis:6379 #redis://redis:6379   here no need for localhost cause redis always opened with docker 
+REDIS_URL=redis://localhost:6379
 
 # Engine configuration
-WITH_SNAPSHOT=true # set false only for factory resetting the entire json
+WITH_SNAPSHOT=true
 SNAPSHOT_FILE=./snapshot.json
-
