--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,6 +1,11 @@
-NEXT_PUBLIC_API_URL=http://api:3000/api/v1 #http://localhost:3000/api/v1 #http://api:3000/api/v1
-NEXT_PUBLIC_WS_URL=ws://ws:3001 #ws://localhost:3001 #ws://ws:3001
 PORT=3002
+
+# Public URLs (Browser -> Localhost)
+# NOTE: These MUST remain localhost even in Docker, because browser runs outside the container
+NEXT_PUBLIC_API_URL=http://localhost:3000/api/v1
+NEXT_PUBLIC_WS_URL=ws://localhost:3001
 
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
+
+
