--- a/mm/.env.example
+++ b/mm/.env.example
@@ -1,2 +1,3 @@
-API_BASE_URL=http://api:3000  # http://api:3000 when using docker, http://localhost:3000 when using localhost
+# Local MM talks to Local API
+API_BASE_URL=http://localhost:3000
 ADMIN_SECRET=admin_secret_123
